--- a/fdphd.bib
+++ b/fdphd.bib
@@ -367,6 +367,27 @@
 }
 /*}}}*/
 %  -- homogenisation -- /*{{{*/
+@article{nicolson1970measurement,
+  title={Measurement of the intrinsic properties of materials by time-domain techniques},
+  author={Nicolson, AM and Ross, GF},
+  journal={Instrumentation and Measurement, IEEE Transactions on},
+  volume={19},
+  number={4},
+  pages={377--382},
+  year={1970},
+  publisher={IEEE}
+}
+@article{weir1974automatic,
+  title={Automatic measurement of complex dielectric constant and permeability at microwave frequencies},
+  author={Weir, William B},
+  journal={Proceedings of the IEEE},
+  volume={62},
+  number={1},
+  pages={33--36},
+  year={1974},
+  publisher={IEEE}
+}
+
 @article{smith2002determination, 
   title={Determination of effective permittivity and permeability of metamaterials from reflection and transmission coefficients},
   author={Smith, DR and Schultz, S and Marko{\v{s}}, P and Soukoulis, CM},
@@ -389,13 +410,50 @@
 /*}}}*/
 %  -- Homogenisation and Fresnel inversion --/*{{{*/
 
-% Andryieuski 2010
-% Chen 2004
+%% review of restoration methods ("standard method, field averaging, quasimode theory, wave phenomena"), presents the WPRM (Wave Propagation Retrieval Method)
+@inproceedings{andryieuski2010homogenization,
+  title={Homogenization of metamaterials: Parameters retrieval methods and intrinsic problems},
+  author={Andryieuski, Andrei and Malureanu, Radu and Lavrinenko, Andrei V},
+  booktitle={Transparent Optical Networks (ICTON), 2010 12th International Conference on},
+  pages={1--5},
+  year={2010},
+  organization={IEEE}
+}
+@article{chen2004robust,
+  title={Robust method to retrieve the constitutive effective parameters of metamaterials},
+  author={Chen, Xudong and Grzegorczyk, Tomasz M and Wu, Bae-Ian and Pacheco Jr, Joe and Kong, Jin Au},
+  journal={Physical Review E},
+  volume={70},
+  number={1},
+  pages={016608},
+  year={2004},
+  publisher={APS}
+}
 % Li 2009
-% new
 % Rockstuhl 2008
-% Yang 2010
-% Woodley 2005 Determining the sign of N
+@article{yang2010retrieving,
+  title={Retrieving the effective parameters of metamaterials from the single interface scattering problem},
+  author={Yang, Jianji and Sauvan, Christophe and Paul, T and Rockstuhl, C and Lederer, F and Lalanne, Philippe},
+  journal={Applied Physics Letters},
+  volume={97},
+  number={6},
+  pages={061102},
+  year={2010},
+  publisher={AIP Publishing}
+}
+@article{menzel2008retrieving,
+  title={Retrieving effective parameters for metamaterials at oblique incidence},
+  author={Menzel, Christoph and Rockstuhl, Carsten and Paul, Thomas and Lederer, Falk and Pertsch, Thomas},
+  journal={Physical Review B},
+  volume={77},
+  number={19},
+  pages={195328},
+  year={2008},
+  publisher={APS}
+}
+
+%% TODO:
+% Luukkonen, O.; Maslovski, Stanislav I. ; Tretyakov, S.A.
 /*}}}*/
 %  -- Current driven homogenisation --/*{{{*/
 % Markel 2013 CDH and effparam for finite samples
@@ -422,8 +480,6 @@
   year={2008},
   publisher={Springer}
 }
-/*}}}*/
-%  -- PhC containing resonators (ad Monsoriu) --/*{{{*/
 % Monsoriu 2006 NonBragg PBG in 1D PhC
 % Chan 2003 PBG from stack of PIM and NIM
 % Jiang 2004 Props of 1D PhC containing SNG
@@ -458,7 +514,17 @@
   publisher={APS}
 }
 /*}}}*/
-
+% -- fishnets and EOT --
+@article{rockstuhl2008light,
+  title={Light propagation in a fishnet metamaterial},
+  author={Rockstuhl, Carsten and Menzel, Christoph and Paul, Thomas and Pertsch, Thomas and Lederer, Falk},
+  journal={Physical Review B},
+  volume={78},
+  number={15},
+  pages={155102},
+  year={2008},
+  publisher={APS}
+}
 
 % == Sources metamaterial other ==
 % -- Dielectric metamaterials --/*{{{*/
