--- a/theory.tex
+++ b/theory.tex
@@ -521,7 +521,7 @@ EBD theory and nonlocal electrodynamics
 \cite{agranovich1962crystal}
 
 Homogenisation of nonlocal media such as wires 
-\cite{capolino2009theory}
+\cite{capolino2009book}
 \cite{silveirinha2007metamaterial}
 \cite{belov2003strong}
 \cite{belov2002dispersion}
