--- a/expe.tex
+++ b/expe.tex
@@ -553,7 +553,7 @@ It is also known that the phase of the reflectance depends on the surface termin
 % Numerous modifications of this method have been made \cite{Hasar2009, Arslanagic2012}
 %}}}
 \paragraph{Applicability of the method}
-TODO this method makes several assumptions that may not hold always. One of them is that nearly all of energy is transferred by the radiated wave, in which case the metamaterial is sometimes described as a \textit{Bloch lattice}. \cite{simovski2007bloch, andryieuski2010homogenization} In other cases, usually in dense and metallic structures, significant amount of energy is transferred by the near-field coupling, and it can be demonstrated that the effective parameters retrieved by this method strongly depend on the number of layers. \cite{rockstuhl2008transition}
+TODO this method makes several assumptions that may not hold always. One of them is that nearly all of energy is transferred by the radiated wave, in which case the metamaterial is sometimes described as a \textit{Bloch lattice}. \cite{simovski2007bloch, andryieuski2012bloch} In other cases, usually in dense and metallic structures, a significant amount of energy is transferred by the near-field coupling, and it can be demonstrated that the effective parameters retrieved by this method strongly depend on the number of layers. \cite{rockstuhl2008transition}
 
 
 \subsection{Current-driven homogenisation} % TODO
