--- a/theory.tex
+++ b/theory.tex
@@ -392,6 +392,34 @@ The $\mathbf{u}(\rr)$ function has the same periodicity as the structure. It is 
 % TODO proof /home/filip/PhD/Sources_MM_theory/Bloch_Theorem_Proof.pdf
 % TODO example illustration of Bloch wave -> plotted in Python
 %}}}
+
+\paragraph{Electromagnetic waves in periodic structures}
+\add{
+The simplest "structure" to be started with is surely the empty vacuum with homogeneous $\varepsilon := 1$ and $\mu := 1$. One particularly simple solution of the Maxwell equations in vacuum is the planar wave propagating along the $z$-axis, defined by%{{{
+\begin{equation} \mathbf{E}(z, t) := \mathbf{E}_0 \cdot e^{ikz- 2i\pi f t}, \label{eq_pw}\end{equation}
+where $\mathbf{E}_0$ is the field amplitude.  This expression gives a complex function, whose imaginary part has no physical meaning and accordingly is not plot either. The following mathematical expressions however turn out to be simpler when using complex exponents instead of the purely real fields.
+In a homogeneous medium, there is a simple \textit{dispersion} relation between the frequency  $f$ and the wavenumber $k$, given as
+\begin{equation} f = \frac{ck}{2\pi \cdot n} = \frac{ck}{2\pi \cdot \sqrt{\varepsilon \mu}}. \label{eq_dispersion}\end{equation}
+The constant $n = \sqrt{\varepsilon \mu}$ connecting the frequency and wavenumber is the index of refraction.
+
+Let us now introduce virtual periodicity, requiring that the vacuum properties are invariant under discrete translation by an arbitrary length $a$ along the $z$-axis, which naturally holds. The important Bloch-Floquet theorem states that while the wave in periodic medium does not have to be periodic anymore, it is a product of two periodic functions:
+\begin{equation} \mathbf{E}(\mathbf{r}, t) = \mathrm{e}^{\mathrm{i} Kz - 2\pi \mathrm{i} f t} \cdot \mathbf{u}(\mathbf{r}), \text{ where } \mathbf{u}(\mathbf{r}) = \mathbf{u}(\mathbf{r}+a\mathbf{z}) = \mathbf{u}(\mathbf{r}+2a\mathbf{z}) = \ldots, \label{eq_bloch}\end{equation} 
+i.e. $\mathbf{u}(\mathbf{r})$ shares the periodicity with the structure and it is generally a complex vector function so it not only alters the direction and magnitude of $\mathbf E$ (or  $\mathbf H$), but also introduces \textit{phase modulation} of the wave in each cell. Note that the capital $K$ is used to distinguish the wavenumber of the Bloch wave envelope from the wavenumber $k$ in free space.
+
+\begin{figure}[ht] \caption{Folded and unfolded dispersion curves for free space and photonic crystal. The phase difference over an unit cell can be expressed either by the wavenumber $K$ (unfolded plots \textbf{a, b} above), or it can be partially absorbed into the periodic mode function $\mathbf{u}(\mathbf{r})$ (folded plots \textbf{c, d} below) } \label{fg_phc} \centering  %% TODO write caption; complement the text to match
+	\includegraphics[width=17cm]{img/PhC_folding_illustration.pdf} 
+\end{figure}
+When the wavelength is less than double cell spacing, or equivalently when $2\pi c /K < 2 a$, the unit cells can scatter the forward propagating wave into the backward direction and vice versa. In an infinite periodic structure the energy transfer must be conserved, so the forward and backward waves must be of the same amplitude.\footnote{The equilibrium forward and backward wave amplitudes may, however, differ in some cases even in in infinite periodic structure. One example is when the constituent materials lose time-reversal symmetry due to static magnetic field.} We assume this also in this example with virtual periodicity. The \textit{Bloch wave} (\ref{eq_bloch}) is a product of two functions, and it gives one degree of freedom to select which part of (\ref{eq_bloch}) expresses the phase shift across one unit cell. Two different conventions are used in the literature.
+\begin{enumerate}
+ \item{In the \textit{unfolded} plot, the phase shift is expressed entirely by the envelope $\mathrm{e}^{\mathrm{i}Kz}$. One can always find a line coming from the front side of a unit cell to its back side, along which the mode function does not change its phase significantly $\mathbf{u(\mathbf{r})}$. In other words, the volume of the unit cell is not divided by any \textit{nodal plane} in the real part of electric field  $\mathbf{u(\mathbf{r})}$. (However, closed nodal planes within the unit cell may appear due to individual resonances.)
+
+In vacuum, the mode function takes the simplest form, being constant $\mathbf{u(\mathbf{r})} = 1$ at all frequencies. The dispersion relation of vacuum forms a direct line as plot in Fig. \ref{fg_phc}a.} 
+ \item{The \textit{folded} plot requires $K/\left(\frac{2\pi}{a}\right) \in (-\frac{1}{2}, \frac{1}{2})$ and the remaining phase is mostly expressed by the mode function. 
+Further savings of space in the plot can be made using the symmetry of the forward and backward waves, so only the positive half for $K/\left(\frac{2\pi}{a}\right) \in (0, \frac{1}{2})$ has to be plot to describe the mode structure.} 
+ \end{enumerate}
+Although maybe less instructive, usually the \textit{folded} bands are plot in the literature and they are used also in Fig. \ref{fg_1dbd}, \ref{fg_rodh} and \ref{fg_erod_radius11} below. The same approach can be used for periodic structures, where the bands are separated by band gaps, cf. Fig. \ref{fg_phc}b and \ref{fg_phc}d.
+}
+
 % -> Bloch theorem (and its proof)
 % in the following we will plot the unfolded bands instead as it seems to give clearer physical interpretation of data.
 % -> TODO doplnit "PhC book": dispersní křivky atd.
@@ -450,8 +478,13 @@ Although maybe less instructive, usually the \textit{folded} bands are plotted i
 % are no novel phenomena, just a novel task of homogenisation and possibly enew values of constitutive parameters"
 
 
-\subsection{What are metamaterials and photonic crystals?} 
+\subsection{What are metamaterials and photonic crystals?} %{{{
 \add{
+%% This is after the theory of eldn in periodic media.
+%% Nonresonant metamaterials (ie. in the 1st Brillouin zone, see [Kadlec2008 / Vol. 33, No. 19 / OPTICS LETTERS] and Juraj]
+%% resonant metamaterials operate in the 2nd BZ (or possibly even third or higher? )
+%% Think over, note the paper Dominec2014
+
 The studies of periodic electromagnetic structures is generally divided into two classes: the \textit{photonic crystals} and \textit{metamaterials}. These types of structures are formally very similar, as they are composed of 2-D or 3-D periodic array of unit cells, and the qualitative difference can be found only after the interaction with an electromagnetic wave is known. 
 
 %The difference is in the way how the unit cell interacts with the electromagnetic field. 
@@ -464,7 +497,7 @@ At the resonant frequencies in the metamaterials, the majority of the energy of 
 
 Both types of structures exhibit the most interesting behaviour at their frequencies of resonance, but the different types of resonances define the technology and materials used to build them. The resonances in PhC rely on wave scattering, which can be easily obtained with any ordinary low-permittivity material such as silica or silicon. On the other hand, the resonances 
 %but the mentioned difference has profound consequences on the behaviour of the structure. 
-
+%}}}
 
 }
 \begin{figure} \caption{img/mm-phc-diagram.pdf}  \centering \includegraphics[width=10cm]{img/mm-phc-diagram.pdf} \end{figure} \clearpage
