--- a/fdphd.bib
+++ b/fdphd.bib
@@ -514,18 +514,6 @@
   publisher={APS}
 }
 /*}}}*/
-% -- fishnets and EOT --
-@article{rockstuhl2008light,
-  title={Light propagation in a fishnet metamaterial},
-  author={Rockstuhl, Carsten and Menzel, Christoph and Paul, Thomas and Pertsch, Thomas and Lederer, Falk},
-  journal={Physical Review B},
-  volume={78},
-  number={15},
-  pages={155102},
-  year={2008},
-  publisher={APS}
-}
-
 % == Sources metamaterial other ==
 % -- Dielectric metamaterials --/*{{{*/
 @article{peng2007,
@@ -640,6 +628,18 @@
 % SC
 % Weiner Transmission through metallic slits
 
+/*}}}*/
+% -- fishnets and EOT --/*{{{*/
+@article{rockstuhl2008light,
+  title={Light propagation in a fishnet metamaterial},
+  author={Rockstuhl, Carsten and Menzel, Christoph and Paul, Thomas and Pertsch, Thomas and Lederer, Falk},
+  journal={Physical Review B},
+  volume={78},
+  number={15},
+  pages={155102},
+  year={2008},
+  publisher={APS}
+}
 /*}}}*/
 % Aleian 2012 Plasmonic Au SiO2 nanoparticles
 % Cristian Kusko interesting simulated spectra
